Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -264,6 +264,7 @@ header.bk-header {
 
             .header-right {
                 float:right;
+                width: 50%;
                 .widget.profile span {
                     float:right;
                 }
@@ -608,9 +609,11 @@ header.bk-header {
 .widget.extendednavigation {
         margin-right:150px;
     }
+    
 
 .widget {
     .extendednavigation {
+        width: 100%;
         float: none;
         position: relative;
         display: inline-block;
@@ -627,7 +630,6 @@ header.bk-header {
             }
         }
         ul {
-            float: right;
             text-align: center;
             padding: 0;
             @media @tablet {
